RESOLVED FIXED15566
possible fix for leak seen in DumpRenderTree
https://bugs.webkit.org/show_bug.cgi?id=15566
Summary possible fix for leak seen in DumpRenderTree
Darin Adler
Reported 2007-10-19 11:45:32 PDT
I keep seeing a leak of a work item, and I spotted some probably-wrong code.
Attachments
patch (1.73 KB, patch)
2007-10-19 11:46 PDT, Darin Adler
eric: review+
Darin Adler
Comment 1 2007-10-19 11:46:59 PDT
Eric Seidel (no email)
Comment 2 2007-10-19 12:15:38 PDT
Comment on attachment 16734 [details] patch r=me.
Darin Adler
Comment 3 2007-10-20 10:36:32 PDT
Committed revision 26825.
Note You need to log in before you can comment on or make changes to this bug.