        Reviewed by Eric.

- http://bugs.webkit.org/show_bug.cgi?id=15566
          possible fix for leak seen in DumpRenderTree

        * DumpRenderTree/WorkQueue.cpp: (WorkQueue::queue):
        Delete the item if it's not put on the queue, since the caller has
        no way of knowing that. Would be better to have the parameter type
        be auto_ptr to express the fact that we take ownership.

        - unrelated change

        * Drosera/mac/main.m: Add missing include.



Canonical link: https://commits.webkit.org/20760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26825 268f45cc-cd09-0410-ab3c-d52691b4dbfc