WebKitTools/Drosera/mac/main.m
@@ -26,6 +26,8 @@
  * THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
+#include <Cocoa/Cocoa.h>
+
 int main(int argc, char *argv[])
 {
     return NSApplicationMain(argc, (const char **) argv);
